Extract Standard library project